k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab
  labels:
    name: homelab
    purpose: learning
